--- a/Evaluacion/web/productos.html
+++ b/Evaluacion/web/productos.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class ="imagen">
-                <img src="{% static '/img/Productos/3.jpg' %}" alt="">                <div class= "overlay">
+                <img src="{% static '/Galeria/Galeria/7276490_1.jpg' %}" alt="">                <div class= "overlay">
                     <h2>$30.000</h2>
                 </div>
             </div>
