--- a/Evaluacion/web/Registration/login.html
+++ b/Evaluacion/web/Registration/login.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Mi primer Login</title>
+    <title>Login-Shecurity</title>
 
     <!--JQUERY-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -44,6 +44,9 @@
                     </div>
                 </div>
             </div>
+            {% if form.errors %}
+            <p>Usuario y/o contraseña son incorrectos</p>
+            {% endif %}
         </form>
         
     </div>
